Closed Bug 428415 Opened 16 years ago Closed 16 years ago

Don't pass uninitialized values to NSS CERT_PKIXVerifyCert [@ CERT_DestroyCertificate - cert_pkixDestroyValOutParam]

Categories

(Core :: Security: PSM, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: KaiE, Assigned: KaiE)

References

Details

(Keywords: crash, topcrash)

Crash Data

Attachments

(1 file)

But 428038 is a bad crash, and the correct fix will be to change NSS to be safe.

However, as a quick fix, it's sufficient to init a pointer variable to NULL in PSM.
Flags: blocking1.9?
Attached patch Patch v1Splinter Review
Attachment #314975 - Flags: review?(rrelyea)
Keywords: crash, topcrash
Summary: Apply bandaid to PSM to avoid crash in NSS CERT_PKIXVerifyCert → Apply bandaid to PSM to avoid crash in NSS CERT_PKIXVerifyCert [@ CERT_DestroyCertificate - cert_pkixDestroyValOutParam]
Adding reference to bug 428038
Blocks: 428038
Comment on attachment 314975 [details] [diff] [review]
Patch v1

r+ rrelyea
Attachment #314975 - Flags: review?(rrelyea) → review+
Comment on attachment 314975 [details] [diff] [review]
Patch v1

requesting approval for topcrash fix
Attachment #314975 - Flags: approval1.9?
Summary: Apply bandaid to PSM to avoid crash in NSS CERT_PKIXVerifyCert [@ CERT_DestroyCertificate - cert_pkixDestroyValOutParam] → Don't pass uninitialized values to NSS CERT_PKIXVerifyCert [@ CERT_DestroyCertificate - cert_pkixDestroyValOutParam]
Comment on attachment 314975 [details] [diff] [review]
Patch v1

a1.9+=damons as this is a top crash fix and it also fixes another crash on startup that leads to a bad UE during software update.
Attachment #314975 - Flags: approval1.9? → approval1.9+
checked in, marking fixed
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
+'ing this to make sure history is accurate.
Flags: blocking1.9? → blocking1.9+
Crash Signature: [@ CERT_DestroyCertificate - cert_pkixDestroyValOutParam]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: