Bug 428415, Don't pass uninitialized values to NSS CERT_PKIXVerifyCert r=rrelyea, a1.9=dsicore